--- a/style.css
+++ b/style.css
@@ -14,9 +14,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 500px;
 }
 
 .message-wrapper {
+    margin: 0.5rem;
     width: 30%;
     height: 5rem;
     margin: 0 auto;
